Ticket #12222 (closed defect: fixed)

Opened 3 years ago

Last modified 3 years ago

Pressing Home and End keys in grid doesn't navigate but starts editing

Reported by: mghie Owned by:
Priority: normal Milestone:
Component: wxGrid Version: 2.9-svn
Keywords: grid keyboard navigation Cc:
Blocked By: Patch: no
Blocking:

Description

Pressing Ctrl+Home and Ctrl+End scrolls to the very first and very last cells respectively, but without the Ctrl editing starts (and inserts "weird" characters), which is unexpected.

Can be observed in the grid sample, for example in the big virtual grid.

Change History

Changed 3 years ago by vadz

  • status changed from new to confirmed

Thanks for reporting, I'll add handling for these keys in wxGrid itself but the real problem is that wx sends wxKeyEvents with nonsensical values for m_uniChar in the first place. This will have to be fixed too, I'll post to wx-dev about this.

Changed 3 years ago by VZ

  • status changed from confirmed to closed
  • resolution set to fixed

(In [64917]) Make Home and End keys work as expected in wxGrid.

Go to the first/last cell of the current row when they're pressed instead of
starting the editor.

Closes #12222.

Note: See TracTickets for help on using tickets.